<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="15dp"
            android:src="@drawable/defaultpic"
            android:layout_width="110dp"
            android:layout_height="110dp" />

        <TextView
            android:text="Conference Ndlovu"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_viewAccount"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="15dp"
            android:src="@drawable/icon_account"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/account"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/change_account_type_close_account"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_viewHelp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="15dp"
            android:src="@drawable/icon_help"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Help"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/privacy_policy_terms_of_use_disclaimer_contact_us"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/settings_btnSignOut"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"
        android:background="@drawable/round_button_shape"
        android:text="Sign Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>