<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PropertyDetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/property_details_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/property_details_sliderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" >

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/property_details_viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.viewpager.widget.ViewPager>

                    <com.viewpagerindicator.CirclePageIndicator
                        android:id="@+id/event_overview_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="bottom"
                        android:padding="10dp"
                        app:centered="true"
                        app:fillColor="#df0623"
                        app:pageColor="#fff"
                        app:snap="false" />

                </RelativeLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/property_details_tvLocation"
                        android:drawableLeft="@drawable/icon_address"
                        android:drawablePadding="10dp"
                        android:textSize="18sp"
                        android:layout_weight="0.7"
                        android:layout_margin="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_margin="10dp"
                        android:id="@+id/property_details_tvStatus"
                        android:textSize="13sp"
                        android:gravity="center_horizontal"
                        android:background="@color/colorAlternative"
                        android:padding="10dp"
                        android:layout_weight="0.3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/property_detetails_inspection"
                    android:background="#696969"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Proposed Inspection Date"
                        android:textColor="#fff"
                        android:textAllCaps="true"
                        fontPath="fonts/bold.ttf"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:textColor="#fff"
                        android:id="@+id/property_details_tvDateTime"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/property_details_btnRescheduleDate"
                            android:background="#d9534f"
                            android:layout_margin="5dp"
                            android:text="Reschedule"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/property_details_btnAcceptDate"
                            android:background="#5cb85c"
                            android:layout_margin="5dp"
                            android:text="Accept"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:text="@string/description"
                    fontPath="fonts/bold.ttf"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:id="@+id/property_details_etDescription"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="#f6f6f6"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/features_and_amenities"
                            fontPath="fonts/bold.ttf"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="MissingPrefix" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/property_details_tvBedroom"
                                android:drawableStart="@drawable/icon_bedroom"
                                android:textSize="24sp"
                                android:text="5"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_margin="8dp"
                                android:drawablePadding="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/property_details_tvBathrooms"
                                android:drawableStart="@drawable/icon_bathroom"
                                android:textSize="24sp"
                                android:text="2"
                                android:textColor="@color/colorPrimaryDark"
                                android:drawablePadding="8dp"
                                android:layout_margin="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/property_details_tvToilets"
                                android:drawableStart="@drawable/icon_toilet"
                                android:textSize="24sp"
                                android:text="3"
                                android:textColor="@color/colorPrimaryDark"
                                android:drawablePadding="8dp"
                                android:layout_margin="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/property_details_tvStudyArea"
                                android:drawableStart="@drawable/icon_study"
                                android:textSize="24sp"
                                android:text="YES"
                                android:textColor="@color/colorPrimaryDark"
                                android:layout_margin="8dp"
                                android:drawablePadding="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/property_details_tvKitchen"
                                android:drawableStart="@drawable/icon_kitchen"
                                android:textSize="24sp"
                                android:text="YES"
                                android:textColor="@color/colorPrimaryDark"
                                android:drawablePadding="8dp"
                                android:layout_margin="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/property_details_tvLounge"
                                android:drawableStart="@drawable/icon_lounge"
                                android:textSize="24sp"
                                android:text="YES"
                                android:textColor="@color/colorPrimaryDark"
                                android:drawablePadding="8dp"
                                android:layout_margin="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/property_details_tvWifi"
                                android:drawableStart="@drawable/icon_wifi"
                                android:textSize="24sp"
                                android:text="NO"
                                android:textColor="@color/colorPrimaryDark"
                                android:drawablePadding="8dp"
                                android:layout_margin="8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:text="Comments/Feedback"
                    fontPath="fonts/bold.ttf"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/property_details_tvComments"
                    android:layout_marginTop="10dp"
                    android:textSize="13sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/next_evaluation_date"
                    fontPath="fonts/bold.ttf"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/property_details_tvNextEvaluationDate"
                    android:textSize="24sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/property_details_btnAddRoom"
                    android:visibility="gone"
                    android:textSize="18sp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="Add Rooms"
                    android:textColor="#fff"
                    android:background="@color/colorPrimary"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/property_details_btnCancelListing"
                    android:textSize="18sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="Cancel Listing"
                    android:textColor="#fff"
                    android:background="#ba3434"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>